# CmakeDemo

./: CMakeLists.txt  README.md
libs/win32/lib/: libzmq.lib
libs/win64/lib/: libzmq.lib
src/: main.cpp
